--- a/Simple Calculator.ipynb
+++ b/Simple Calculator.ipynb
@@ -15,10 +15,7 @@
       "Enter 'A' for Addition.\n",
       "Enter 'S' for Subtraction.\n",
       "Enter 'D' for Division.\n",
-      "Enter 'M' for Multiplication.\n",
-      "Enter operation choice (A,S,M,D): a\n",
-      "Enter first number: e\n",
-      "Please enter a number.\n"
+      "Enter 'M' for Multiplication.\n"
      ]
     }
    ],
